# miracl-wrapper

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: Tools.h
src/: Tools.cpp
tests/: CMakeLists.txt  test_benchmark.cpp  test_tools.cpp
